  	  sdcc/device/lib/mos6502/_divslong.s,
  	  sdcc/device/lib/mos6502/_modsint.s,
  	  sdcc/device/lib/mos6502/_modslong.s,
  	  sdcc/device/lib/mos6502/_moduint.s,
  	  sdcc/device/lib/mos6502/_modulong.s,
  	  sdcc/device/lib/mos6502/_mulschar.s,
  	  sdcc/device/lib/mos6502/_muluchar.s,
  	  sdcc/device/lib/mos6502/abs.c:
  	  Add assembly implementation of divs, mod, mulchar and abs.

2022-02-26 Gabriele Gorla <gorlik@yahoo.com>

	* sdcc/sdas/asxxsrc/aslist.c:
	  Revert changes in slew() which caused regression failures on z80 ports.
	* sdcc/src/mos6502/ralloc.c:
	  Remove dead code from old ralloc.

2022-02-26 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* sdas/asgb/gbmch.:
	  Add cycle table from upstream.

2022-02-26 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* src/SDCCsymt.c,
	  support/regression/tests/bug-3332.c:
	  Fix bugs #3332 and #3333.

2022-02-24 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* doc/sdccman.lyx:
	  Improve calling convention documentation.

2022-02-24 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* doc/sdccman.lyx:
	  Fix a minor documentation issue.

2022-02-23 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* src/z80/peeph.def:
	  Remove ldi/ldh rules.
	* src/z80/peeph-sm83.def:
	  Add ldi/ldh rules.

2022-02-22 Gabriele Gorla <gorlik@yahoo.com>

	* sdcc/sdas/asxxsrc/asxxxx.h,
	  sdcc/sdas/asxxsrc/asmain.c,
	  sdcc/sdas/as6500/r65pst.c:
	  Add .error and .message directives.
	* sdcc/sdas/asxxsrc/assubr.c,
	  sdcc/sdas/asxxsrc/aslex.c,
	  sdcc/sdas/asxxsrc/asexpr.c:
	  More updates from upstream asxxxx 5.40

2022-02-22 Gabriele Gorla <gorlik@yahoo.com>

	* sdcc/sdas/asxxsrc/asxxxx.h,
	  sdcc/sdas/asxxsrc/asmain.c,
	  sdcc/sdas/asxxsrc/asexpr.c,
	  sdcc/sdas/asxxsrc/asdata.c:
	  Enable -v option (out of range errors) from upstream asxxxx 5.40.
	* sdcc/sdas/asxxsrc/assubr.c,
	  sdcc/sdas/asxxsrc/asout.c,
	  sdcc/sdas/asxxsrc/asmcro.c,
	  sdcc/sdas/asxxsrc/aslex.c: